--- a/Stylesheet.css
+++ b/Stylesheet.css
@@ -51,19 +51,13 @@ td {
 h3 {
     color: black;
     font-family: 'Forum';
-    font-weight: normal;
+    font-weight: lighter;
     text-align: center;
     text-transform: uppercase;
-    font-size: 20px;
+    font-size: 18px;
     margin: 0px;
     padding: 20px;
-}
-
-li {
-    border-right:black solid 1px;
-    height: 60px;
-    margin: 0;
-    padding: 0;
+    letter-spacing: 0.5px;
 }
 
 h1.sitename {
@@ -93,20 +87,19 @@ h2 {
     color:black;
     font-family: 'Forum';
     font-weight: bold;
-    font-size: 50px;
+    font-size: 80px;
     margin: auto;
     text-align: center;
     text-transform:uppercase;
     padding: 40px;
+    letter-spacing: 2px;
+    word-spacing: 3px;
+
 }
 
 #sectiontitle {
     border-bottom:black solid 1px;
     padding: 40px;
-}
-
-p {
-    font-family: 'Montserrat', sans-serif;
 }
 
 .biography {
@@ -118,6 +111,11 @@ p {
 
 #biography {
     text-align: justify;
+    letter-spacing: 0.5px;
+    word-spacing: 3px;
+    font-weight: lighter;
+    font-family: 'Montserrat', sans-serif;
+    line-height: 1.6;
 }
 
 button {
@@ -131,6 +129,8 @@ a {
     color: black;
     text-decoration: none;
     max-height: 60px;
+    padding: 4px;
+
 }
 
   #sbheadshot {
