--- a/Stylesheet.css
+++ b/Stylesheet.css
@@ -2,16 +2,7 @@ div {
     padding: 40px;
 }
 
-section {
-    border-bottom:black solid 1px;
-    padding: 40px;
-    width:auto;
-    margin: 0px;
-    padding: 0px;
-    display: block;
-    text-align: center;
 
-}
 
 header {
     background-color:rgb(248, 248, 248);
@@ -45,9 +36,6 @@ td {
     padding: 0;
 }
 
-#sitetitle {
-}
-
 h3 {
     color: black;
     font-family: 'Forum';
@@ -58,12 +46,6 @@ h3 {
     margin: 0px;
     padding: 20px;
     letter-spacing: 0.5px;
-}
-
-h1.sitename {
-    max-width: 10px;
-    padding: 0;
-    margin:auto;
 }
 
 body {
@@ -79,8 +61,6 @@ h1 {
     font-family: 'Forum';
     font-weight: bold;
     font-size: 40px;
-    display: block;
-    margin: auto;
 }
 
 h2 {
@@ -88,13 +68,32 @@ h2 {
     font-family: 'Forum';
     font-weight: bold;
     font-size: 80px;
-    margin: auto;
-    text-align: center;
     text-transform:uppercase;
-    padding: 40px;
     letter-spacing: 2px;
     word-spacing: 3px;
+}
 
+.testheader {
+    border-bottom: solid black 1px;
+    height: 60px;
+    width: 60px;
+    display: inline-block;
+}
+
+.testheader a {
+    border-left: solid black 1px;
+}
+
+li {
+    text-transform: uppercase;
+    text-decoration: none;
+    color: black;
+    font-family: 'Forum';
+    font-weight: lighter;
+    text-transform: uppercase;
+    font-size: 18px;
+    letter-spacing: 0.5px;
+    list-style: none;
 }
 
 #sectiontitle {
@@ -104,7 +103,7 @@ h2 {
 
 .biography {
     border: dotted 4px rgb(85, 84, 84);
-    background-color: #a2cf983b;
+    background-color: hsla(109, 36%, 70%, 0.231);
     padding: 20px 20px 30px 30px;
     margin: 20px;
 }
@@ -130,6 +129,15 @@ a {
     text-decoration: none;
     max-height: 60px;
     padding: 4px;
+    cursor: pointer;
+}
+
+header a:hover {
+    background-color: black;
+    color: whitesmoke;
+    height: 600px;
+    margin: 0;
+    padding: 0;
 
 }
 
